# nl2sql

./: .env  README.md  pyproject.toml
.github/: CODEOWNERS  header-checker-lint.yml  issue-branch.yml
.github/workflows/: issue-branch.yml  pylint.yml
getting-started/: 1. Simple Workflows.ipynb  2. Custom Prompting with Custom Examples.ipynb
getting-started/dataset/: custom-dataset.xlsx
nl2sql/assets/examples/: __init__.py  column_filter_v1.json  column_filter_v2.json  join_identification_v1.json  join_identification_v2.json  spider_sql_queries_v1.json  sql_generation_v1.json  table_filter_v1.json  table_filter_v2.json
nl2sql/assets/prompts/: __init__.py  column_description_v1.json  column_description_v2.json  column_filter_thought_gen_v1.json  column_filter_thought_score_v1.json  prompting_strat_column_filter_gen_v1.json  prompting_strat_query_rank_v1.json  prompting_strat_sql_gen_v1.json  prompting_strat_table_filter_gen_v1.json  table_description_v1.json  table_description_v2.json  table_description_v3.json  table_filter_thought_gen_v1.json  table_filter_thought_score_v1.json  table_filter_thought_score_v2.json  task_column_selection_core_v1.json  task_eval_fix_core_v1.json  task_join_selection_core_v1.json  task_sql_generation_core_v1.json  task_table_selection_core_v1.json
nl2sql/commons/reporting/: fingerprint.py  persist.py
nl2sql/commons/utils/: classifiers.py
nl2sql/datasets/: __init__.py  base.py  custom.py  standard.py
nl2sql/executors/: __init__.py
nl2sql/executors/linear_executor/: __init__.py  core.py
nl2sql/llms/: google_palm.py  vertexai.py
nl2sql/tasks/: __init__.py
nl2sql/tasks/column_selection/: __init__.py  core.py
tests/: CoreColumnSelector.py  CoreEvalFix.py  CoreJoinSelector.py  CoreLinearExecutor.py  CoreLinearExecutorwithFix.py  CoreSqlGenerator.py  CoreTableSelector.py  CustomDataset.py  ReactSqlGenerator.py
tests/tasks/: sql_generation_test.py  table_selection_test.py
(+9 files in other folders)
